--- a/diretorio_servidor/index.html
+++ b/diretorio_servidor/index.html
@@ -36,7 +36,7 @@
 
     <ul>
         <li><a href="arquivo.txt">Link para o arquivo.txt</a></li>
-        <li><a href="ufsjLogo.png">Link para imagem.png</a></li>
+        <li><a href="ufsjLogo.png">Link para ufsjLogo.png</a></li>
         </ul>
 </body>
 </html>
