--- a/diretorio_servidor/index.html
+++ b/diretorio_servidor/index.html
@@ -42,6 +42,8 @@
     <ul>
         <li><a href="arquivo.txt">Link para o arquivo.txt</a></li>
         <li><a href="ufsjLogo.png">Link para ufsjLogo.png</a></li>
+        <li><a href="Omaior.png">Link para Omaior.png</a></li>
+        <li><a href="PaiDoAtletico.png">Link para PaidoAtletico.png</a></li>
         </ul>
 </body>
 </html>
